--- a/lib/xdg/com.ayugram.desktop.desktop
+++ b/lib/xdg/com.ayugram.desktop.desktop
@@ -2,7 +2,7 @@
 Name=AyuGram Desktop
 Comment=Desktop version of AyuGram - ToS breaking Telegram client
 TryExec=ayugram-desktop
-Exec=DESKTOPINTEGRATION=1 ayugram-desktop -- %u
+Exec=env DESKTOPINTEGRATION=1 ayugram-desktop -- %u
 Icon=ayugram
 Terminal=false
 StartupWMClass=AyuGram
